RESOLVED FIXED261003
Fix some guards for USE(THEME_ADWAITA)
https://bugs.webkit.org/show_bug.cgi?id=261003
Summary Fix some guards for USE(THEME_ADWAITA)
Don Olmstead
Reported 2023-08-31 16:49:55 PDT
...
Attachments
Don Olmstead
Comment 1 2023-08-31 16:56:47 PDT
EWS
Comment 2 2023-09-01 09:19:55 PDT
Committed 267554@main (eb79b7552ad6): <https://commits.webkit.org/267554@main> Reviewed commits have been landed. Closing PR #17314 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.