Fix some guards for USE(THEME_ADWAITA) https://bugs.webkit.org/show_bug.cgi?id=261003

Reviewed by Michael Catanzaro.

Miscellaneous fixes to make `USE_THEME_ADWAITA` work more cross
platform.

* Source/WTF/wtf/PlatformUse.h:
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.cpp:
(WebCore::MediaControlsHost::layoutTraitsClassName const):
* Source/WebCore/rendering/RenderThemeAdwaita.cpp:
(WebCore::RenderThemeAdwaita::systemColor const):

Canonical link: https://commits.webkit.org/267554@main